bonus/confs/argocd_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.local.com
      http:
        paths:
          - path: /                        
            pathType: Prefix                        
            backend:
              service:
                name: argocd-server                        
                port:
                  number: 80
